MDEV-7572: InnoDB: Assertion failure in log_init_crypt_key if file_key_management_plugin is used

Fixed error handling and added disabling InnoDB redo log encryption
if encryption key management plugin is not there.